---------------------------------------------------------------------------------------------------
Version: 3.0.25
Date: ????
  Changes:
    - Fixed some techs having a too-fast cycle time
    - Fixed all techs added by "enable all feature flags" not being seen by autotech.
---------------------------------------------------------------------------------------------------
Version: 3.0.24
Date: 2025-09-15
  Changes:
    - Remade tech tree with autotech 2.0. Science pack cost comparasion:
    - automation: n/a -> trigger
    - py1: 100 -> 100
    - logi: 360 -> 300
    - py2: 1300 -> 800
    - chem: 2000 -> 1400
    - py3: 2250 -> 1750
    - prod: 1750 -> 2250
    - py4: 2250 -> 3000
    - utility: 1500 -> 3300
    - space: 1000 -> 3600
    - phyrric: 3000 -> 8000
    - Added Dutch locale (thanks, QatSquirrel!)
    - Flying robot frame item is no longer hidden.
    - Removed "nexelit" and "chromium" hidden techs from the game.
    - Removed "nexelit-plate" and "making-chromium" hidden recipes from the game.
---------------------------------------------------------------------------------------------------
Version: 3.0.23
Date: 2025-08-23
  Changes:
    - Added a spanish translation
---------------------------------------------------------------------------------------------------
Version: 3.0.22
Date: 2025-08-12
  Changes:
    - Added a german translation
    - Fixed Bulk Inserter 1 and 2 technologies not having the correct prerequesites and dependants. Resolves https://github.com/pyanodon/pybugreports/issues/1086 and https://github.com/pyanodon/pybugreports/issues/1099
---------------------------------------------------------------------------------------------------
Version: 3.0.21
Date: Unreleased
  Info:
    - Skipped due to portal/github version mismatch.
---------------------------------------------------------------------------------------------------
Version: 3.0.20
Date: 2025-07-20
  Changes:
    - Made coal hidden